--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "element-ui": "^2.11.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
+    "axios": "^0.19.0",
+    "element-ui": "^2.11.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -22,6 +22,8 @@
     "imagemin": "^6.1.0",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngquant": "^7.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3"
   }
 }
