--- a/package.json
+++ b/package.json
@@ -7,23 +7,24 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.6",
     "axios": "^0.19.0",
     "element-ui": "^2.11.1",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.7",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.5",
-    "@vue/cli-service": "^3.6.0",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
-    "img-loader": "^3.0.1",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-service": "^3.9.3",
     "imagemin": "^6.1.0",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngquant": "^7.0.0",
-    "vue-template-compiler": "^2.6.10",
+    "img-loader": "^3.0.1",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.3"
+    "webpack-parallel-uglify-plugin": "^1.1.1",
+    "vue-template-compiler": "^2.6.10"
   }
 }
