--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vue-cli-service serve --mode dev",
+    "build": "vue-cli-service build --mode prod"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -23,7 +23,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-parallel-uglify-plugin": "^1.1.1"
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "vue-template-compiler": "^2.6.10"
   }
 }
