--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve --mode dev",
-    "build": "vue-cli-service build --mode prod"
+    "build": "vue-cli-service build --mode prod",
+    "inspect": "vue-cli-service inspect --mode prod"
   },
   "dependencies": {
     "axios": "^0.19.0",
