--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build --mode prod",
-    "inspect": "vue-cli-service inspect --mode prod"
+    "inspect": "vue-cli-service inspect --mode prod",
+    "analyz": "NODE_ENV=prod npm_config_report=true npm run build"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -21,6 +22,7 @@
     "less-loader": "^4.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
