--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build --mode prod",
+    "build:dev": "vue-cli-service build --mode dev",
     "inspect": "vue-cli-service inspect --mode prod",
     "report": "vue-cli-service build --report --mode prod"
   },
