--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve --mode dev",
-
     "build": "vue-cli-service build --mode prod",
-
     "build:dev": "vue-cli-service build --mode dev",
-
     "inspect": "vue-cli-service inspect --mode prod",
-
     "report": "vue-cli-service build --report --mode prod"
   },
   "dependencies": {
@@ -26,8 +22,8 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "webpack-bundle-analyzer": "^3.3.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "vue-template-compiler": "^2.6.10"
   }
 }
