--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build --mode prod",
     "build:dev": "vue-cli-service build --mode dev",
     "inspect": "vue-cli-service inspect --mode prod",
-    "report": "vue-cli-service build --report --mode prod"
+    "report": "vue-cli-service build --report --mode report"
   },
   "dependencies": {
     "axios": "^0.19.0",
