--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build --mode prod",
     "build:dev": "vue-cli-service build --mode dev",
-    "inspect": "vue-cli-service inspect --mode prod",
-    "report": "vue-cli-service build --report --mode report"
+    "inspect": "vue-cli-service inspect --mode prod"
   },
   "dependencies": {
     "axios": "^0.19.0",
