--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build --mode prod",
     "build:dev": "vue-cli-service build --mode dev",
-    "inspect": "vue-cli-service inspect --mode prod"
+    "inspect": "vue-cli-service inspect --mode prod",
+    "report": "vue-cli-service build --mode report"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -18,11 +19,12 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.2",
     "@vue/cli-service": "^3.9.3",
+    "image-webpack-loader": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "webpack-bundle-analyzer": "^3.3.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
